@@ -1,25 +1,17 @@
 package com.marketinghub.worker.adset;
 
 import com.marketinghub.audience.Audience;
-import com.marketinghub.audience.repository.AudienceRepository;
-import com.marketinghub.experiment.AdSet;
-import com.marketinghub.experiment.Experiment;
-import com.marketinghub.experiment.ExperimentPlatform;
-import com.marketinghub.experiment.ExperimentStatus;
+import com.marketinghub.experiment.dto.AdSetDto;
 import com.marketinghub.experiment.dto.CreateAdSetRequest;
-import com.marketinghub.experiment.repository.AdSetRepository;
-import com.marketinghub.experiment.repository.ExperimentRepository;
-import com.marketinghub.experiment.service.AdSetService;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Service;
-
+import com.marketinghub.worker.adset.BackendExperimentClient.BackendClientException;
+import com.marketinghub.worker.adset.BackendExperimentClient.ReadyExperiment;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
 
 /**
  * Service responsible for creating ad set records from approved audiences.
@@ -27,21 +19,12 @@ import java.util.UUID;
 @Service
 public class AudienceAdSetService {
     private static final Logger log = LoggerFactory.getLogger(AudienceAdSetService.class);
-    private final ExperimentRepository experimentRepository;
-    private final AudienceRepository audienceRepository;
-    private final AdSetRepository adSetRepository;
-    private final AdSetService adSetService;
+    private final BackendExperimentClient backendClient;
     private final AudienceAdSetChatGptClient chatGptClient;
 
-    public AudienceAdSetService(ExperimentRepository experimentRepository,
-                                AudienceRepository audienceRepository,
-                                AdSetRepository adSetRepository,
-                                AdSetService adSetService,
+    public AudienceAdSetService(BackendExperimentClient backendClient,
                                 AudienceAdSetChatGptClient chatGptClient) {
-        this.experimentRepository = experimentRepository;
-        this.audienceRepository = audienceRepository;
-        this.adSetRepository = adSetRepository;
-        this.adSetService = adSetService;
+        this.backendClient = backendClient;
         this.chatGptClient = chatGptClient;
     }
 
@@ -50,32 +33,47 @@ public class AudienceAdSetService {
      *
      * @return map keyed by experiment id listing the persisted ad sets
      */
-    public Map<Long, List<AdSet>> generate() {
-        Map<Long, List<AdSet>> result = new HashMap<>();
-        List<Experiment> experiments = experimentRepository.findAllReadyForAdSets(
-                ExperimentPlatform.FACEBOOK,
-                List.of(ExperimentStatus.PLANNED, ExperimentStatus.RUNNING, ExperimentStatus.PAUSED)
-        );
-        for (Experiment experiment : experiments) {
-            long existing = adSetRepository.countByExperimentId(experiment.getId());
-            if (existing > 0) {
-                log.info("Skipping experiment {} because ad sets already exist", experiment.getId());
-                result.put(experiment.getId(), Collections.emptyList());
+    public Map<Long, List<AdSetDto>> generate() {
+        Map<Long, List<AdSetDto>> result = new HashMap<>();
+        List<ReadyExperiment> experiments;
+        try {
+            experiments = backendClient.listExperimentsReadyForAdSets();
+        } catch (BackendClientException e) {
+            log.error("Failed to fetch experiments ready for ad sets: {}", e.getMessage());
+            return Map.of();
+        }
+        for (ReadyExperiment ready : experiments) {
+            var experiment = ready.experiment();
+            if (experiment == null || experiment.getId() == null) {
+                log.warn("Skipping experiment without identifier in backend payload");
                 continue;
             }
-            List<Audience> audiences = audienceRepository.findDetailedByNicheId(experiment.getNiche().getId());
-            List<Audience> relevantAudiences = filterAudiencesForExperiment(audiences, experiment);
-            if (relevantAudiences.isEmpty()) {
-                log.warn("No audiences found for experiment {} to generate ad sets", experiment.getId());
-                result.put(experiment.getId(), Collections.emptyList());
+            Long experimentId = experiment.getId();
+            boolean hasExisting;
+            try {
+                hasExisting = backendClient.hasAdSets(experimentId);
+            } catch (BackendClientException e) {
+                log.error("Failed to check existing ad sets for experiment {}: {}", experimentId, e.getMessage());
+                result.put(experimentId, List.of());
                 continue;
             }
-            List<AdSet> saved = new ArrayList<>();
-            for (Audience audience : relevantAudiences) {
+            if (hasExisting) {
+                log.info("Skipping experiment {} because ad sets already exist", experimentId);
+                result.put(experimentId, List.of());
+                continue;
+            }
+            List<Audience> audiences = ready.audiences();
+            if (audiences == null || audiences.isEmpty()) {
+                log.warn("No audiences found for experiment {} to generate ad sets", experimentId);
+                result.put(experimentId, List.of());
+                continue;
+            }
+            List<AdSetDto> saved = new ArrayList<>();
+            for (Audience audience : audiences) {
                 try {
                     AdSetPlan plan = chatGptClient.planAdSet(experiment, audience);
                     CreateAdSetRequest request = new CreateAdSetRequest();
-                    request.setExperimentId(experiment.getId());
+                    request.setExperimentId(experimentId);
                     request.setLocation(plan.location());
                     request.setInterests(join(plan.interests()));
                     request.setLookalikes(join(plan.lookalikes()));
@@ -84,34 +82,21 @@ public class AudienceAdSetService {
                     request.setDurationDays(plan.durationDays());
                     request.setPrompt(plan.prompt());
                     request.setModel(plan.model());
-                    AdSet adSet = adSetService.create(request);
-                    saved.add(adSet);
+                    AdSetDto adSet = backendClient.createAdSet(request);
+                    if (adSet != null) {
+                        saved.add(adSet);
+                    } else {
+                        log.warn("Backend returned null ad set for experiment {} audience {}", experimentId, audience.getId());
+                    }
+                } catch (BackendClientException e) {
+                    log.error("Backend rejected ad set for experiment {} audience {}: {}", experimentId, audience.getId(), e.getMessage());
                 } catch (Exception e) {
-                    log.error("Failed to create ad set for experiment {} audience {}", experiment.getId(), audience.getId(), e);
+                    log.error("Failed to create ad set for experiment {} audience {}", experimentId, audience.getId(), e);
                 }
             }
-            result.put(experiment.getId(), saved);
+            result.put(experimentId, saved);
         }
         return result;
-    }
-
-    private static List<Audience> filterAudiencesForExperiment(List<Audience> audiences, Experiment experiment) {
-        if (audiences.isEmpty()) {
-            return List.of();
-        }
-        UUID hypothesisId = experiment.getHypothesisRef() != null ? experiment.getHypothesisRef().getId() : null;
-        List<Audience> filtered = new ArrayList<>();
-        for (Audience audience : audiences) {
-            if (!audience.isApproved()) {
-                continue;
-            }
-            if (audience.getHypothesis() == null) {
-                filtered.add(audience);
-            } else if (hypothesisId != null && hypothesisId.equals(audience.getHypothesis().getId())) {
-                filtered.add(audience);
-            }
-        }
-        return filtered;
     }
 
     private static String join(List<String> values) {
